# ApoorvBackend

./: .env.template  .gitignore  README.md  load_bal.ipynb  load_balancer.py  main_api.py  pyproject.toml  requirements.txt
apoorvbackend/src/database/: postgres_backup.py
apoorvbackend/src/llm_handler/: handler.py  llm.py  load_balancer.py
apoorvbackend/src/logger/: __init__.py
apoorvbackend/src/models/: chat_models.py  lootlocker_models.py
apoorvbackend/src/prompt_loader/: loader.py
apoorvbackend/src/redis/: redis_handlers.py
apoorvbackend/storage/prompts/L1/: pebbles.txt  warrior.txt
apoorvbackend/storage/prompts/L2/: duderat.txt  sentinel.txt
apoorvbackend/storage/prompts/L3/: pebbles.txt  turing.txt
apoorvbackend/utilites/: __init__.py
