[project]
name = "apoorvbackend"
version = "0.1.0"
description = ""
authors = [
    {name = "GL3MON",email = "harisshragavarchives@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.10,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "langchain-google-genai (>=2.0.11,<3.0.0)",
    "langgraph (>=0.3.2,<0.4.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.1"
langchain = ">=0.3.15,<1.0"
langchain-core  = "^0.3.31"
fastapi = "0.115.10"
uvicorn = "0.34.0"
langchain-experimental = "^0.3.4"
langchain-community = "^0.3.18"
langgraph = "^0.3.2"
loguru = "0.7.3"
