[project]
name = "apoorvbackend"
version = "0.1.0"
description = ""
authors = [
    {name = "GL3MON",email = "harisshragavarchives@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.10,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "langchain-google-genai (>=2.0.11,<3.0.0)",
    "langgraph (>=0.3.2,<0.4.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "redis (>=5.2.1,<6.0.0)",
    "openai (>=1.65.4,<2.0.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)",
    "langchain-openai (>=0.3.8,<0.4.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pytz (>=2025.1,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.1"
langchain = ">=0.3.15,<1.0"
langchain-core  = "^0.3.31"
fastapi = "0.115.10"
uvicorn = "0.34.0"
langchain-experimental = "^0.3.4"
langchain-community = "^0.3.18"
langgraph = "^0.3.2"
loguru = "0.7.3"
google-genai = "1.3.0"
